infra/k8s/prod/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
          # volumeMounts:
          #   - name: auth-mongo-storage
          #     mountPath: /data/db
      # volumes:
      #   - name: auth-mongo-storage
      #     persistentVolumeClaim:
      #       claimName: auth-mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: auth-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
